--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   font-family: Arial, sans-serif; /* Fuente de texto de toda la página */
   background: linear-gradient(135deg, #66cc00, #2575fc); /* Fondo degradado diagonal */
   color: #fff; /* Color de texto blanco */
-  text-align: center; /* Centra el texto horizontalmente */
+  text-align: left
+                   ; /* Centra el texto horizontalmente */
   height: 100vh; /* Ocupa el 100% de la altura de la ventana */
   margin: 0; /* Quita los márgenes por defecto */
   display: flex; /* Activa flexbox */
@@ -43,3 +44,4 @@ button {
 button:hover {
   background: #e68900; /* Color más oscuro al pasar el mouse */
 }
+
