--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   height: 100vh; /* Ocupa el 100% de la altura de la ventana */
   margin: 0; /* Quita los márgenes por defecto */
   display: flex; /* Activa flexbox */
-  justify-content: center; /* Centra el contenido horizontalmente */
-  align-items: center; /* Centra el contenido verticalmente */
+  justify-content: left; /* Centra el contenido horizontalmente */
+  align-items: left; /* Centra el contenido verticalmente */
 }
 
 .container {
@@ -43,5 +43,6 @@ button {
 button:hover {
   background: #e68900; /* Color más oscuro al pasar el mouse */
 }
+
 
 
