--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif; /* Fuente de texto de toda la página */
   background: linear-gradient(135deg, #66cc00, #2575fc); /* Fondo degradado diagonal */
-  color: #FFOOOO; /* Color de texto blanco */
+  color: #FFOOOO; /* Color de texto rojo */
   text-align: left ; /* Centra el texto horizontalmente +/
   height: 100vh; /* Ocupa el 100% de la altura de la ventana */
   margin: 0; /* Quita los márgenes por defecto */
@@ -11,9 +11,9 @@ body {
 }
 
 .container {
-  background: rgba(255,0,0); /* Fondo negro semitransparente */
+  background: rgba(255,0,0); /* Fondo azul semitransparente */
   padding: 30px; /* Espacio interno alrededor del contenido */
-  border-radius: 15px; /* Bordes redondeados */
+  border-radius: 20px; /* Bordes redondeados */
   width: 80%; /* Ocupa 80% del ancho de la pantalla */
   max-width: 500px; /* No supera los 500px de ancho */
   box-shadow: 0px 5px 15px rgba(0,0,0,0.3); /* Sombra para dar efecto flotante */
@@ -25,8 +25,8 @@ h1 {
 }
 
 #quote {
-  font-size: 20px; /* Tamaño de letra de las citas */
-  margin: 20px 0; /* Espacio arriba y abajo */
+  font-size: 23px; /* Tamaño de letra de las citas */
+  margin: 22px 0; /* Espacio arriba y abajo */
   min-height: 60px; /* Altura mínima para evitar que el cuadro cambie de tamaño cuando cambia el texto */
 }
 
@@ -34,8 +34,8 @@ button {
   background: #ff9800; /* Color de fondo naranja */
   border: none; /* Sin borde */
   padding: 12px 20px; /* Espaciado interno */
-  font-size: 16px; /* Tamaño de letra */
-  border-radius: 10px; /* Bordes redondeados */
+  font-size: 18px; /* Tamaño de letra */
+  border-radius: 15px; /* Bordes redondeados */
   cursor: pointer; /* Cambia el cursor a "mano" al pasar encima */
   transition: 0.3s; /* Suaviza las transiciones al pasar el mouse */
 }
@@ -43,6 +43,7 @@ button {
 button:hover {
   background: #e68900; /* Color más oscuro al pasar el mouse */
 }
+
 
 
 
