--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif; /* Fuente de texto de toda la página */
-  background: linear-gradient(135deg, #(c0c0c0, #OOOOff); /* Fondo degradado diagonal */
-  color: #ffOOO; /* Color de texto blanco */
+  background: linear-gradient(135deg, #(2575fc, #ccOO33); /* Fondo degradado diagonal */
+  color: #cb786a; /* Color de texto blanco */
   text-align: left ; /* Centra el texto horizontalmente +/
   height: 100vh; /* Ocupa el 100% de la altura de la ventana */
   margin: 0; /* Quita los márgenes por defecto */
@@ -43,6 +43,7 @@ button {
 button:hover {
   background: #ffOOOO; /* Color más oscuro al pasar el mouse */
 }
+
 
 
 
